<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="sunshine">Sunshine</string>
    <string name="date_and_time">Date and Time</string>
    <!-- "action" means action bar by default -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map" >Map App</string>
    <string name="action_share" >Share</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>            <!-- key value in SharedPreferences -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">12561,USA</string>

    <string name="pref_title_settings_edit_name">Edit Location</string>
    <string name="pref_default_settings_name">12505</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_list">DetailActivity</string>
    <string name="pref_title_units">Select Your Units</string>
    <string name="pref_sync">XXX</string>
    <string name="pref_sync_summ">XXX</string>
    <string name="pref_sync_ConnectionType">XXX</string>


</resources>
