<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--
 <CheckBoxPreference
        android:key="pref_sync"
        android:title="@string/pref_sync"
        android:summary="@string/pref_sync_summ"
        android:defaultValue="true" />
-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
     />
    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_title_units"
        android:dialogTitle="@string/pref_title_units"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/listentries"
        android:entryValues="@array/listvalues"
        />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
<!--
    <ListPreference
        android:dependency="pref_sync"
        android:key="pref_sync_ConnectionType"
        android:title="@string/pref_sync_ConnectionType"
        android:dialogTitle="@string/pref_sync_ConnectionType"
        android:defaultValue="-1"
        />
        -->
<!--        android:entries="@array/pref_sync_ConnectionTypes_entries"
        android:entryValues="@array/pref_sync_ConnectionTypes_values"
        android:defaultValues="@array/pref_sync_ConnectionTypes_default" -->
<!--        android:negativeButtonText="@null"
        android:positiveButtonText="@null" -->



</PreferenceScreen>
